# quote-forge-backend

./: .env.example  README.md  bucket-policy.json  pyproject.toml  requirements.txt
authentication/: serializers.py
business/: admin.py  models.py  serializers.py  urls.py  views.py
business/migrations/: 0001_initial.py  0002_alter_business_options.py  0003_delete_term_business_created_on_and_more.py  0004_customer_quotation_lineitem.py  0005_rename_title_customer_name.py  0006_alter_lineitem_quotation.py  0007_quotation_title.py  0008_customer_business.py  0009_business_user.py  0010_alter_product_options_alter_quotation_options.py  0011_remove_quotation_business_remove_quotation_customer_and_more.py
core/: urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
document_gen/: apps.py
quotations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
quotations/migrations/: 0001_initial.py  0002_lineitem_amount.py
utils/: api_exceptions.py  pagination.py
